[gd_scene load_steps=4 format=4 uid="uid://b2wu4jrouvj84"]

[ext_resource type="Script" uid="uid://b8liyxp4jtvwm" path="res://scenes/levels/TavernKitchen/TavernKitchen.gd" id="1_focmh"]
[ext_resource type="TileSet" uid="uid://bkacfi56tmg8i" path="res://tilesets/puzzle_tileset.tres" id="2_r6uw3"]
[ext_resource type="PackedScene" uid="uid://bx2syps2qmyxq" path="res://scenes/sprites/Demolitonist/Demolitonist.tscn" id="3_7goxq"]

[node name="TavernKitchen" type="Node2D" unique_id=86550673]
script = ExtResource("1_focmh")

[node name="Ground" type="TileMapLayer" parent="." unique_id=43500059]
y_sort_enabled = true
texture_filter = 1
tile_map_data = PackedByteArray("AAD///3/AAAVAAAAAAD+//3/AAAWAAAAAAD7//3/AAAVAAAAAAD7//z/AAAVAAAAAAD8//z/AAAWAAAAAAD8//3/AAAWAAAAAAD9//3/AAAXAAAAAAD6//z/AAAWAAAAAAD7//v/AAAWAAAAAAD7//r/AAAWAAAAAAD7//n/AAAUAAAAAAD8//n/AAAXAAAAAAD8//r/AAAWAAAAAAD8//v/AAAVAAAAAAD+//n/AAAUAAEAAAD+//r/AAAUAAEAAAD///r/AAAUAAEAAAD///v/AAAVAAEAAAAAAPv/AAAXAAEAAAD+//v/AAAVAAEAAAD///n/AAAVAAEAAAAAAPr/AAAXAAEAAAAAAPn/AAAUAAEAAAABAPn/AAAVAAEAAAABAPr/AAAWAAEAAAACAPr/AAAWAAEAAAADAPr/AAAUAAEAAAAEAPr/AAAXAAEAAAAEAPn/AAAWAAEAAAADAPn/AAAVAAEAAAACAPn/AAAUAAEAAAAAAP3/AAAWAAAAAAAAAPz/AAAWAAAAAAD9//r/AAAWAAAAAAAAAP7/AAAWAAAAAAD///7/AAAWAAAAAAD+//7/AAAVAAAAAAD9//7/AAAWAAAAAAD8//7/AAAWAAAAAAD7//7/AAAWAAAAAAA=")
tile_set = ExtResource("2_r6uw3")

[node name="Floor" type="TileMapLayer" parent="." unique_id=1194112006]
z_index = 1
texture_filter = 1
tile_map_data = PackedByteArray("AAD8//3/AAAdAAgAAAD9//3/AAAeAAgAAAD+//3/AAAfAAgAAAD8//7/AAAdAAkAAAD9//7/AAAeAAkAAAD+//7/AAAfAAkAAAA=")
tile_set = ExtResource("2_r6uw3")

[node name="PressPlates" type="TileMapLayer" parent="." unique_id=2097850539]
z_index = 1
texture_filter = 1
tile_set = ExtResource("2_r6uw3")

[node name="Liquids" type="TileMapLayer" parent="." unique_id=546346752]
z_index = 1
texture_filter = 1
tile_set = ExtResource("2_r6uw3")

[node name="Walls" type="TileMapLayer" parent="." unique_id=815234442]
z_index = 2
texture_filter = 1
tile_map_data = PackedByteArray("AAAAAPn/AAAYABUAAAABAPn/AAAZABUAAAABAPv/AAABAAYAAAACAPv/AAACAAkAAAADAPv/AAACAAkAAAAEAPv/AAACAAkAAAAFAPv/AAAHAAkAAAAFAPr/AAAEAAkAAAAFAPn/AAAEAAkAAAAFAPj/AAAHAAgAAAAEAPj/AAACAAkAAAADAPj/AAACAAkAAAACAPj/AAACAAkAAAABAPj/AAACAAkAAAAAAPj/AAACAAkAAAD///j/AAACAAkAAAD+//j/AAACAAkAAAD9//j/AAACAAYAAAD6//n/AAAAAAcAAAD6//r/AAAAAAcAAAD8//j/AAABAAkAAAD6//j/AAAAAAYAAAD9//n/AAAAAAgAAAD9//z/AAABAAgAAAABAPz/AAAAAAgAAAD+//z/AAACAAkAAAD///z/AAADAAkAAAD7//j/AAAEAAsAAAD6//v/AAAAAAgAAAD6//3/AAAAAAYAAAD6//z/AAAFAAoAAAD+//n/AAASAAYAAAD///n/AAATAAYAAAD9//v/AAAAAAYAAAD8//n/AAATAAwAAAD6//7/AAAAAAcAAAD7//7/AAAWAAAAAAD8//7/AAAdAAkAAAD9//7/AAAeAAkAAAD+//7/AAAfAAkAAAD///7/AAAWAAAAAAAAAP7/AAAWAAAAAAABAP7/AAAWAAAAAAABAP3/AAAVAAAAAAD+//v/AAAVABMAAAD///v/AAAWABMAAAACAPn/AAAQAAoAAAADAPn/AAARAAoAAAAEAPn/AAAYABMAAAAEAPr/AAAfABMAAAAFAPz/AAAEAAkAAAA=")
tile_set = ExtResource("2_r6uw3")

[node name="Trails" type="TileMapLayer" parent="." unique_id=995153033]
z_index = 3
texture_filter = 1
tile_set = ExtResource("2_r6uw3")

[node name="Items" type="TileMapLayer" parent="." unique_id=48252063]
z_index = 3
y_sort_enabled = true
texture_filter = 1
tile_set = ExtResource("2_r6uw3")

[node name="Demolitonist" parent="Items" unique_id=1361832750 instance=ExtResource("3_7goxq")]
z_index = 3
z_as_relative = false
position = Vector2(41, 45)

[node name="Trees" type="TileMapLayer" parent="." unique_id=132708161]
z_index = 4
y_sort_enabled = true
texture_filter = 1
tile_map_data = PackedByteArray("AAD7//7/AAA/AAYAAAD8//7/AAA/AAYAAAD9//7/AAA/AAYAAAD+//7/AAA/AAYAAAD///7/AAA/AAYAAAAAAP7/AAA/AAYAAAAFAPz/AAA/AAYAAAABAP3/AAA/AAcAAAABAP7/AAA/AAoAAAA=")
tile_set = ExtResource("2_r6uw3")

[node name="BadItems" type="TileMapLayer" parent="." unique_id=1919387272]
z_index = 6
texture_filter = 1
tile_map_data = PackedByteArray("AAD+//v/AAAVABMAAAD///v/AAAWABMAAAACAPn/AAAQAAoAAAADAPn/AAARAAoAAAAEAPn/AAAYABMAAAAEAPr/AAAfABMAAAA=")
tile_set = ExtResource("2_r6uw3")

[node name="GoodItems" type="TileMapLayer" parent="." unique_id=1151768918]
z_index = 6
texture_filter = 1
tile_map_data = PackedByteArray("AAD+//v/AAAVABMAAAD///v/AAAWABMAAAACAPn/AAAQAAoAAAADAPn/AAARAAoAAAAEAPn/AAAYABMAAAAEAPr/AAAfABMAAAA=")
tile_set = ExtResource("2_r6uw3")

[node name="MovingItems" type="TileMapLayer" parent="." unique_id=1625252441]
modulate = Color(1, 0.392157, 0.392157, 0.392157)
z_index = 6
texture_filter = 1
tile_set = ExtResource("2_r6uw3")
